fixing slideshow spacing on button

--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -173,7 +173,8 @@ IMG.sn_link_img { position:relative; top:3px }
   
 
 /* LIGHT BUTTONS */
-.light.O-button A, .light.A-button A, .light.B-button A, .light.C-button A { text-decoration:none; color:#000; border:1px solid transparent; outline:none; -webkit-user-select:none; -moz-user-select:none; }
+.light.O-button A, .light.A-button A, .light.B-button A, .light.C-button A { text-decoration:none; color:#000; border:1px solid transparent; outline:none; -webkit-
+	-select:none; -moz-user-select:none; }
 
 /* LIGHT O */
 .light.O, .light.O-indent, .light.O-soft, .light.O-innerglow, .light.O-input { background:#fff; color:#000 }
@@ -355,34 +356,44 @@ TD.form_label B {}
 
 
 /* TOP MENU */
-#drop_shadow {background:url(../images/top_shadow-100px.png) repeat-x top; position:absolute; top:0; left:0; width:100%; height:120px; z-index:-10}
+#drop_shadow {background:url(../images/gradients/top_shadow-100px.png) repeat-x top; position:absolute; top:0; left:0; width:100%; height:120px; z-index:-10}
 
-#meta_menu { opacity:1; position:relative; z-index:1000 }
+#meta_menu { position: absolute; top: 0; width: 100%; opacity:1; z-index:1000 }
 #meta_menu:hover, #meta_menu:focus { opacity:1 }
+#intro_menu { position: absolute; top: 0; left: 248px }
+#report_box {position:absolute; width:235px; text-align:right; font-size:9px; color:#666; opacity:1; z-index:1003; top:0;}
+#logo { position: absolute; top: 0px; left: 0; margin: 4px 14px 0px 13px; width: 230px; z-index:1001 }
 
 /* SYMBOLIKON */
 #symbolikon { position:relative; z-index:90; opacity:1; z-index:1002; float:left; margin:10px 10px 2px 10px }
 #symbolikon:hover, #symbolikon:focus { opacity:1 }
 
-#report_box {position:absolute; width:235px; text-align:right; font-size:9px; color:#666; opacity:1; z-index:1003;}
-
-/* MAIN MENU */
-#main_menu { margin:0px; padding:0px; opacity:1; z-index:1001; position:relative  }
-#main_menu:hover, #main_menu:focus { opacity:1; z-index:1001 }
-
 /* SUBMENU */
 .sub_menu {float:left; padding:4px 0px; opacity:1; font-family:Calibri, Arial, Helvetica, sans-serif; position:relative; margin: 0 -4px;}
-.sub_menu-item {float:left; background:#fff; margin:4px 2px; font-size:15px; height: 26px; line-height: 26px;}
+.sub_menu-item {float:left; background:#fff; margin:0 2px 4px 2px; float:left; padding:0; font-size:15px; height: 26px; line-height: 26px;}
 .sub_menu-item A {color:#000; border:#ccc 1px solid; height: 26px; display: inline-block;}
 .sub_menu-item A:hover {border:#000 1px solid; background:#000; color:#fff}
 .sub_menu-item A {text-decoration: none; padding:2px 4px; border-radius: 8px; -moz-border-radius: 8px; -webkit-border-radius: 8px; height: 26px;}
-.sub_menu-item-on {float:left; margin:4px 2px; font-weight:bold; font-size:15px; height: 24px; line-height: 24px;}
-.sub_menu-item-on A {color: #fff; text-decoration: none; border:#000 1px solid; background: #000; padding:2px 6px; height: 26px; border-radius-topright: 8px; border-radius-bottomright: 8px; -moz-border-radius-topright: 8px; -moz-border-radius-bottomright: 8px; -webkit-border-radius-topright: 8px; -webkit-border-radius-bottomright: 8px;}
+.sub_menu-item.selected {font-weight:bold; font-size:15px; height: 24px; }
+.sub_menu-item.selected A {color: #fff; text-decoration: none; border:#000 1px solid; background: #000; padding:2px 4px; height: 26px; border-radius-topright: 8px; border-radius-bottomright: 8px; -moz-border-radius-topright: 8px; -moz-border-radius-bottomright: 8px; -webkit-border-radius-topright: 8px; -webkit-border-radius-bottomright: 8px;}
 
 .main_menu-item { float:left; font-size:13px; margin:2px 4px; }
 .main_menu-item A {padding:4px 10px; background:#404040; text-decoration:none; color:#ffffff; border-radius: 8px; -moz-border-radius: 8px; -webkit-border-radius: 8px;}
 .main_menu-item A:hover, .main_menu-item A:focus {padding:3px 9px; text-decoration:none; color:#ffffff; border:1px solid #fff;}
 
+/* SETTINGS MENU */
+#settings_menu { float:right; margin-right: 10px }
+#userNode { overflow: hidden; margin:0 0 -2px; height: 32px; cursor: pointer; border-radius: 8px; -moz-border-radius: 8px; -webkit-border-radius: 8px;}
+#userNode a { display: block; margin-left: 32px }
+#settingsButton a img { margin: 1px 1px -2px; border: 0px }
+
+/* FLOATING BUTTONS */
+#dreamStarLink { position: absolute; top: 0; left: 420px; margin: 8px; text-decoration: none; height: 21px }
+#dreamStarLink img { margin: 2px 5px 0pt 0pt; float: left; border: 0px }
+#adminLink { display:block; padding: 5px 8px; margin: 8px; text-decoration: none; height: 21px }
+#adminLink img { padding-top:2px; }
+#newEntry { display: block; padding: 4px 8px; font-size: 17px; font-weight: bold; margin: 8px 12px 0 0; text-decoration: none; border: 2px solid transparent }
+#newEntry span { color: #093 }
 
 /* MINI BUTTONS */
 .light.button-small, .light.button-small-post, .light.button-small-cancel, .light.button-small-delete {background: #EEEEEE; box-shadow: inset 0px 9px 0px #fff; -moz-box-shadow: inset 0px 9px 0px #fff; -webkit-box-shadow: inset 0px 9px 0px #fff; cursor:pointer;}
@@ -815,10 +826,3 @@ SELECT.search-bar {border-style:solid; -moz-border-radius:8px}
 }
 
 #commentsPanel a, #datePanel span, #locationPanel span, #peoplePanel a, #emotionsPanel a, #environmentsPanel a, #imagePanel a, #linksPanel a, #seriesPanel a, #tagsPanel a  { cursor: pointer; }
-
-#userNode { 
-  overflow: hidden;
-  height: 32px;
-  cursor: pointer;
-  border-radius: 8px; -moz-border-radius: 8px; -webkit-border-radius: 8px;
-}
